اصلاح و مرتب سازی تمپلیت برای بهبود عملکرد

--- a/account/templates/account/otp_login.html
+++ b/account/templates/account/otp_login.html
@@ -16,7 +16,7 @@
                             {% for error in form.phone.errors %}
                                 <p class="alert alert-danger">{{ error }}</p>
                             {% endfor %}
-                            {{ form.phone }}
+                            {{ form }}
                             <p class="help-block text-danger"></p>
                         </div>
                         <div>
