نکات تکمیلی مثل درگاه پرداخت و هدایت لاگین به صفحه مورد نظر

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     {% include 'includes/head.html' %}
+    <meta name="csrf-token" content="{{ csrf_token }}">
 </head>
 <body>
     <!-- Topbar Start -->
