--- a/cart/templates/cart/order_detail.html
+++ b/cart/templates/cart/order_detail.html
@@ -34,11 +34,13 @@
                 </table>
             </div>
             <div class="col-lg-4">
-                <form class="mb-30" action="">
+                <form class="mb-30" method="post" action="{% url 'cart:apply_discount' order.id %}">
+                    {% csrf_token %}
                     <div class="input-group">
-                        <input type="text" class="form-control border-0 p-4" placeholder="Coupon Code">
+                        <input type="text" name="discount_code" class="form-control border-0 p-4"
+                               placeholder="Discount Code">
                         <div class="input-group-append">
-                            <button class="btn btn-primary">Apply Coupon</button>
+                            <button type="submit"  class="btn btn-primary">Apply Discount Code</button>
                         </div>
                     </div>
                 </form>
@@ -50,21 +52,21 @@
                             <h5>Total</h5>
                             <h5>${{ order.total_price }}</h5>
                         </div>
-                        {% if request.user.addresses.all %}
-                            <a href="{% url 'cart:order_create' %}"
-                           class="btn btn-block btn-success font-weight-bold my-3 py-3">Pay</a>
-                        {% endif %}
                     </div>
                 </div>
                 {% if request.user.addresses.all %}
-                    <select class="form-control">
-                        <option selected>One this select address</option>
-                        {% for address in request.user.addresses.all %}
-                            <option value="3">{{ address.address }}</option>
-                        {% endfor %}
-                    </select>
-                     <a href="{% url 'account:add_address' %}?next={% url 'cart:order_detail' order.id %}"
-                       class="btn btn-block btn-primary font-weight-bold my-3 py-3">Add another one</a>
+                    <form action="{% url 'cart:send_request' order.id %}" method="post">
+                        {% csrf_token %}
+                        <select name="address" class="form-control">
+                            <option selected>One this select address</option>
+                            {% for address in request.user.addresses.all %}
+                                <option value="{{ address.id }}">{{ address.address }}</option>
+                            {% endfor %}
+                        </select>
+                        <a href="{% url 'account:add_address' %}?next={% url 'cart:order_detail' order.id %}"
+                           class="btn btn-block btn-primary font-weight-bold my-3 py-3">Add another one</a>
+                        <button type="submit" class="btn btn-block btn-success font-weight-bold my-3 py-3">Pay</button>
+                    </form>
                 {% else %}
                     <a href="{% url 'account:add_address' %}?next={% url 'cart:order_detail' order.id %}"
                        class="btn btn-block btn-primary font-weight-bold my-3 py-3">You don't have any address,Add
