--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load render_partial %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +12,7 @@
     <!-- Topbar End -->
 
     <!-- Navbar Start -->
-    {% include 'includes/navbar.html' %}
+    {% render_partial 'product:navbar' %}
     <!-- Navbar End -->
 
     {% block main %}
